--- a/homepg.css
+++ b/homepg.css
@@ -23,24 +23,20 @@
   .navbar {
     background-color: #2e8336df;
     color: #fff;
-    padding: 20px 0;
+    padding: 10px 0;
   }
   
-  .logo {
+  .logo_img{
+    /* display:inline-block; */
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
     font-size: 24px;
     font-weight: bold;
     float: left;
+    margin-right: 10px;
+   
   }
-  /* changes here! */
-  /* .logo-container {
-    width: 150px; /* Adjust the width as needed */
-   /* height: auto;
-  }
-  
-  .logo {
-    max-width: 100%;
-    height: auto;
-  } */
   
 .nav-menu {
     float: right;
@@ -59,7 +55,9 @@
     color: #fff;
     text-decoration: none;
   }
-  
+  .nav-menu li a:hover{
+    color: black;
+  }
   .hero {
     background-image: url('bg.png');
   
@@ -74,7 +72,12 @@
     font-size: 48px;
     margin-bottom: 20px;
   }
-  
+  .harv h1{
+    font-family: cursive;
+    font-size: 30px;
+    display: inline;
+    
+  }
   .subtitle {
     font-size: 24px;
     margin-bottom: 30px;
