some more changes

--- a/frontEnd/homepg.css
+++ b/frontEnd/homepg.css
@@ -87,16 +87,19 @@
   
   .btn {
     display: inline-block;
-    padding: 10px 20px;
-    background-color: #61ff66da;
-    color: #fff;
+    padding: 10px 10px;
+    background-color: #49e94eda;
+    color: #080808;
     text-decoration: none;
-    border-radius: 5px;
+    border-radius: 8px;
     transition: background-color 0.3s ease;
+    box-shadow: 0 15px 25px rgba(0, 0, 0, 0.6);
   }
   
   .btn:hover {
     background-color: #199623bb;
+    color: #f8f1f1;
+    box-shadow: 0 15px 25px rgba(0, 0, 0, .6);
   }
   
   .features {
