--- a/frontEnd/homepg.css
+++ b/frontEnd/homepg.css
@@ -24,6 +24,8 @@
     background-color: #2e8336df;
     color: #fff;
     padding: 10px 0;
+    display: flex; /* Add this */
+    justify-content: space-between;
   }
   
   .logo_img{
@@ -35,6 +37,7 @@
     font-weight: bold;
     float: left;
     margin-right: 10px;
+    width: auto;
    
   }
   
