--- a/frontEnd/Aboutus.css
+++ b/frontEnd/Aboutus.css
@@ -2,7 +2,7 @@
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+  
   }
   
 
@@ -18,30 +18,50 @@
     margin: 0 auto;
     overflow: hidden;
   }
-  
-  .navbar {
-    background-color: #2e8336df;
-    color: #fff;
-    padding: 20px 0;
+
+  .nav-menu {
+    float: right;
   }
   
+  .nav-menu li a {
+    font-size: 20px;
+    color: #fff;
+    text-decoration: none;
+  }
+  .nav-menu li a:hover{
+    color: black;
+    text-decoration:overline;
+  }
 
-
+  .navbar {
+  background-color: #2e8336df;
+  color: #fff;
+  padding: 10px 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center; /* Center items vertically */
+  }
+  
   .logo-container {
-    width: 60px; 
-    height: 60px; 
-    overflow: hidden;
-    border-radius: 50%; 
+    display: flex;
+    align-items: center;
   }
   
   .logo {
-    width: 100%;
-    height: auto;
-    border-radius: 50%; 
+    width: 50px;
+    height: 50px;
+    overflow: hidden;
+    border-radius: 50%;
+    margin-right: 1px;
   }
   
-
-
+  .harv h1 {
+    font-family: cursive;
+    font-size: 30px;
+    margin-left: 9px;
+    margin-bottom: 1px;
+  }
+  
   .nav-menu {
     float: right;
   }
@@ -65,11 +85,14 @@
   }
   
   .about h1 {
-    font-size: 36px;
+    font-size: 50px;
     margin-bottom: 20px;
+    font-family: cursive;
+    text-align: center;
   }
   
   .about p {
+    font-size: 20px;
     margin-bottom: 20px;
   }
   
@@ -77,7 +100,7 @@
     background-color: #333;
     color: #fff;
     text-align: center;
-    padding: 20px 0;
+    padding: 10px 0;
   }
   
   .footer-links {
