--- a/frontEnd/cont.css
+++ b/frontEnd/cont.css
@@ -24,23 +24,33 @@
   }
   
   .navbar {
-    background-color: #333;
-    color: #fff;
-    padding: 20px 0;
+    background-color: #2e8336df;
+  color: #fff;
+  padding: 10px 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center; /* Center items vertically */
   }
+  
   .logo-container {
-    width: 60px; 
-    height: 60px; 
-    overflow: hidden;
-    border-radius: 50%; 
+    display: flex;
+    align-items: center;
   }
   
   .logo {
-    width: 100%;
-    height: auto;
-    border-radius: 50%; 
+    width: 50px;
+    height: 50px;
+    overflow: hidden;
+    border-radius: 50%;
+    margin-right: 1px;
   }
   
+  .harv h1 {
+    font-family: cursive;
+    font-size: 30px;
+    margin-left: 9px;
+    margin-bottom: 1px;
+  }
   
   .nav-menu {
     float: right;
@@ -48,7 +58,8 @@
   
   .nav-menu li {
     display: inline-block;
-    margin-left: 20px;
+    margin-left: 19px;
+    font-size: 20px;
   }
   
   .nav-menu li:first-child {
@@ -58,6 +69,10 @@
   .nav-menu li a {
     color: #fff;
     text-decoration: none;
+  }
+  .nav-menu li a:hover{
+    color: black;
+    text-decoration:overline;
   }
   
   .contact {
@@ -72,6 +87,9 @@
   
   .contact p {
     margin-bottom: 20px;
+  }
+  .container h3{
+    text-align: center;
   }
   
   form {
@@ -99,20 +117,28 @@
   
   form button {
     display: block;
-    width: 100%;
+    margin-left: 130px;
+    width: 50%;
     padding: 10px;
-    background-color: #333;
+    background-color: #199623bb;
+    
     color: #fff;
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    text-align: center;
+    font-size: 16px;
+  }
+  form button:hover{
+    background-color: #49e94eda;
+    color: black;
   }
   
   footer {
     background-color: #333;
     color: #fff;
     text-align: center;
-    padding: 20px 0;
+    padding: 10px 0;
   }
   
   .footer-links {
