--- a/frontEnd/farmer.css
+++ b/frontEnd/farmer.css
@@ -19,21 +19,34 @@
   }
   
   .navbar {
-    background-color: #333;
-    color: #fff;
-    padding: 20px 0;
+    background-color: #2e8336df;
+  color: #fff;
+  padding: 10px 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center; /* Center items vertically */
   }
   
   .logo-container {
-    width: 60px; 
-    height: auto;
+    display: flex;
+    align-items: center;
   }
   
   .logo {
-    max-width: 100%;
-    height: auto;
+    width: 50px;
+    height: 50px;
+    overflow: hidden;
     border-radius: 50%;
+    margin-right: 1px;
   }
+  
+  .harv h1 {
+    font-family: cursive;
+    font-size: 30px;
+    margin-left: 9px;
+    margin-bottom: 1px;
+  }
+  
   
   .nav-menu {
     float: right;
@@ -49,8 +62,13 @@
   }
   
   .nav-menu li a {
+    font-size: 20px;
     color: #fff;
     text-decoration: none;
+  }
+  .nav-menu li a:hover{
+    color: black;
+    text-decoration:overline;
   }
   
   .farmers {
@@ -58,15 +76,26 @@
   }
   
   .farmers h1 {
-    font-size: 36px;
+    font-size: 50px;
+    font-family: cursive;
     margin-bottom: 30px;
     text-align: center;
   }
   
   .farmer {
-    margin-bottom: 40px;
+    width: calc(33.33% - 40px); 
+    display: inline-block; 
+    margin-right: 30px; 
+    margin-bottom: 30px;
+    vertical-align: top; 
     text-align: center;
+    padding: 20px;
+    background-color: #fff;
+    border-radius: 8px; 
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); 
+    transition: transform 0.3s ease-in-out; 
   }
+  
   
   .farmer-avatar {
     width: 150px;
@@ -79,7 +108,7 @@
     background-color: #333;
     color: #fff;
     text-align: center;
-    padding: 20px 0;
+    padding: 10px 0;
   }
   
   .footer-links {
