--- a/frontEnd/services.css
+++ b/frontEnd/services.css
@@ -20,22 +20,32 @@
   }
   
   .navbar {
-    background-color: #333;
-    color: #fff;
-    padding: 20px 0;
+    background-color: #2e8336df;
+  color: #fff;
+  padding: 10px 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center; /* Center items vertically */
   }
-
+  
   .logo-container {
-    width: 60px; 
-    height: 60px; 
-    overflow: hidden;
-    border-radius: 50%; 
+    display: flex;
+    align-items: center;
   }
   
   .logo {
-    width: 100%;
-    height: auto;
-    border-radius: 50%; 
+    width: 50px;
+    height: 50px;
+    overflow: hidden;
+    border-radius: 50%;
+    margin-right: 1px;
+  }
+  
+  .harv h1 {
+    font-family: cursive;
+    font-size: 30px;
+    margin-left: 9px;
+    margin-bottom: 1px;
   }
   
   .nav-menu {
@@ -44,7 +54,8 @@
   
   .nav-menu li {
     display: inline-block;
-    margin-left: 20px;
+    margin-left: 19px;
+    font-size: 20px;
   }
   
   .nav-menu li:first-child {
@@ -55,13 +66,18 @@
     color: #fff;
     text-decoration: none;
   }
-  
+  .nav-menu li a:hover{
+    color: black;
+    text-decoration:overline;
+  }
+
   .services {
     padding: 50px 0;
   }
   
   .services h1 {
-    font-size: 36px;
+    font-size: 50px;
+    font-family: cursive;
     margin-bottom: 30px;
     text-align: center;
   }
@@ -73,7 +89,12 @@
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s ease-in-out;
+    width: calc(33.33% - 40px); /* Adjust width according to your preference */
+    display: inline-block; /* Display inline-block to ensure they are on the same line */
+    margin-right: 30px; /* Adjust margin-right according to your preference */
+    vertical-align: top; /* Align them to the top */
   }
+  
   
   .service:hover {
     transform: translateY(-5px);
@@ -94,7 +115,7 @@
     background-color: #333;
     color: #fff;
     text-align: center;
-    padding: 20px 0;
+    padding: 10px 0;
   }
   
   .footer-links {
