--- a/frontEnd/services.css
+++ b/frontEnd/services.css
@@ -18,13 +18,20 @@
   }
   
   .navbar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 1000; /* Ensure it's above other content */
     background-color: #2e8336df;
-  color: #fff;
-  padding: 10px 0;
-  display: flex;
-  justify-content: space-between;
-  align-items: center; /* Center items vertically */
-  }
+    color: #fff;
+    padding: 10px 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center; /* Center items vertically */
+    /* padding-bottom: 30px; */
+}
+
   
   .logo-container {
     display: flex;
@@ -79,6 +86,7 @@
     font-size: 50px;
     font-family: cursive;
     margin-bottom: 30px;
+    margin-top: 80px;
     text-align: center;
   }
   
