--- a/frontEnd/cont.css
+++ b/frontEnd/cont.css
@@ -80,7 +80,8 @@
   }
   
   .contact h1 {
-    font-size: 36px;
+    font-family: cursive;
+    font-size: 50px;
     margin-bottom: 20px;
     text-align: center;
   }
