--- a/frontEnd/homepg.css
+++ b/frontEnd/homepg.css
@@ -72,9 +72,9 @@
     text-decoration:overline;
   }
   .hero {
-    background-image: url('bg.png');
-  
-	background-position: center;
+    margin-top: 100px;
+    background-image: url('bg11.jpg');
+	 background-position: center;
     background-size: cover;
     color: #070707;
     text-align: center;
