--- a/frontEnd/Aboutus.css
+++ b/frontEnd/Aboutus.css
@@ -87,7 +87,7 @@
   
   .about {
     padding: 50px 0;
-    background-image: url("bg12.jpg");
+    background-image: url("bg11.jpg");
     margin-top: 100px;
   }
   
@@ -101,6 +101,7 @@
   .about p {
     font-size: 20px;
     margin-bottom: 20px;
+    color: #fff;
   }
   
   .footer {
