--- a/frontEnd/Wholesaler.css
+++ b/frontEnd/Wholesaler.css
@@ -21,12 +21,17 @@ body {
 }
 
 .navbar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 1000; 
   background-color: #2e8336df;
-color: #fff;
-padding: 10px 0;
-display: flex;
-justify-content: space-between;
-align-items: center; /* Center items vertically */
+  color: #fff;
+  padding: 10px 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .logo-container {
@@ -74,6 +79,8 @@ align-items: center; /* Center items vertically */
 
 .Wholesaler {
   padding: 50px 0;
+  margin-top: 100px;
+  background-image: url('bg11.jpg');
 
 }
 
