--- a/frontEnd/farmer.css
+++ b/frontEnd/farmer.css
@@ -10,6 +10,7 @@
     font-size: 16px;
     line-height: 1.6;
     background-color: #f9f9f9;
+    
   }
   
   .container {
@@ -19,13 +20,20 @@
   }
   
   .navbar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 1000; 
     background-color: #2e8336df;
-  color: #fff;
-  padding: 10px 0;
-  display: flex;
-  justify-content: space-between;
-  align-items: center; /* Center items vertically */
-  }
+    color: #fff;
+    padding: 10px 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center; 
+    margin-bottom: 30px;
+    
+}
   
   .logo-container {
     display: flex;
@@ -73,6 +81,9 @@
   
   .farmers {
     padding: 50px 0;
+    background-image: url('bg11.jpg');
+    /* background-size: cover; */
+    margin-top: 100px;
   }
   
   .farmers h1 {
