--- a/frontEnd/login.css
+++ b/frontEnd/login.css
@@ -16,7 +16,7 @@ body {
 	justify-content: center;
 	align-items: center;
 	height: 100vh;
-	background-image: url("I.jpg");
+	background-image: url("loginbg.jpg");
 	background-size: cover;
 	background-position: center;
 }
