--- a/frontEnd/services.css
+++ b/frontEnd/services.css
@@ -22,14 +22,14 @@
     top: 0;
     left: 0;
     width: 100%;
-    z-index: 1000; /* Ensure it's above other content */
+    z-index: 1000; 
     background-color: #2e8336df;
     color: #fff;
     padding: 10px 0;
     display: flex;
     justify-content: space-between;
-    align-items: center; /* Center items vertically */
-    /* padding-bottom: 30px; */
+    align-items: center;
+    
 }
 
   
@@ -80,14 +80,16 @@
   .services {
     padding: 50px 0;
     text-align: center;
+    background-image: url('bg11.jpg');
+    margin-top: 100px;  
   }
   
   .services h1 {
     font-size: 50px;
     font-family: cursive;
     margin-bottom: 30px;
-    margin-top: 100px;
     text-align: center;
+    
   }
   
   
