--- a/frontEnd/login.css
+++ b/frontEnd/login.css
@@ -1,5 +1,5 @@
 * {
-	margin: 0;
+	margin:0;
 	padding: 0;
 	box-sizing: border-box;
 }
@@ -23,8 +23,8 @@ body {
 .login-box {
 	width: 400px;
 	padding: 40px;
-	/* background: linear-gradient(#006992, #2E1760); */
 	box-sizing: border-box;
+	text-shadow: 1px 1px 5px rgba(0,0,0,0.3);
 	box-shadow: 0 15px 25px rgba(0, 0, 0, .6);
 	border-radius: 10px;
 	opacity: 0;
@@ -32,10 +32,8 @@ body {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	
     background-color: #d0d0d098;
 	border-radius: 8px;
-    /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); */
     padding: 20px;
     width: 400px;
     min-height: fit-content;
@@ -70,14 +68,12 @@ body {
 	position: relative;
 	margin-bottom: 20px;
 	text-align: center;
-	/* Center the dropdown */
+	
 }
 
 .select-box select {
 	width: 100%;
-	/* Adjusted width */
 	padding: 12px 100px 12px 100px;
-	/* Adjusted padding */
 	font-family: cursive;
 	font-size: 16px;
 	border: none;
@@ -91,67 +87,38 @@ body {
 
 .user-box {
 	position: relative;
-	margin-bottom: 20px;
+	margin-bottom: 15px;
 	text-align: center;
-	/* Center the input fields */
+	
 }
 
-.user-box input[type="text"],
-.user-box input[type="password"] {
+
+.user-box input {
 	width: 100%;
 	padding: 12px;
-	font-size: 16px;
+	font-size: 18px;
 	font-family: cursive;
 	border: none;
 	border-radius: 5px;
-	background-color: #f2f2f2;
+	background-color: rgb(255, 255, 255);
 	margin-bottom: 20px;
 	color: #070000;
 	transition: background-color 0.2s, transform 0.2s;
 }
 
-.user-box label {
-	color: #fff;
-	display: block;
-	margin-bottom: 5px;
-	transition: 0.2s;
-}
-
-.user-box input[type="text"]:focus,
-.user-box input[type="password"]:focus,
-.user-box input[type="text"]:valid,
-.user-box input[type="password"]:valid {
-	background-color: #e1e1e1;
-}
-
-.user-box input[type="text"]:focus~label,
-.user-box input[type="password"]:focus~label,
-.user-box input[type="text"]:valid~label,
-.user-box input[type="password"]:valid~label {
-	top: -10px;
-	left: 10px;
-	font-size: 12px;
-	font-family: cursive;
-	color: #007bff;
-}
-
 .forgot-password {
-	display: inline-block;
-	text-align: right;
+	text-align: center;
 	color: #030303;
 	text-decoration: none;
 	font-size: 17px;
 	margin-top: 5px;
-	transition: color 0.2s;
+	border: 2px solid rgb(47, 5, 233);
 	display: inline-block;
 	background-color: #007bff;
-	padding: 13px 12px 13px 12px;
-	border-radius: 5px;
-	text-decoration: none;
-	text-align: center;
+	padding: 9px 10px 9px 10px;
+	border-radius: 8px;
 	cursor: pointer;
 	transition: background-color 0.2s;
-	/* margin-right: 10px; */
 	position: relative;
 	margin-left: 20px;
 }
@@ -170,13 +137,14 @@ body {
 .submit-button {
 	background-color: #007bff;
 	color: #070707;
-	padding: 12px 48px 12px 48px;
-	border: none;
-	border-radius: 5px;
+	padding: 9px 50px 9px 50px;
+	border: 2px solid rgb(47, 5, 233);
+	border-radius: 8px;
 	font-family: cursive;
 	font-size: 17px;
 	cursor: pointer;
 	transition: background-color 0.2s;
+	text-align: center;
 	/* margin-right: 50px; */
 }
 
@@ -186,4 +154,9 @@ body {
 .new-user-text{
 	font-size: 17px;
 	color: rgb(15, 15, 15);
+}
+.new-user-text{
+	margin-left: 30px;
+	margin-right: 65px;
+	text-decoration: none;
 }
