--- a/frontEnd/homepg.css
+++ b/frontEnd/homepg.css
@@ -93,18 +93,19 @@ body {
 .btn {
   display: inline-block;
   padding: 10px 10px;
-  background-color: #49e94eda;
+  /* background-color: #49e94eda; */
   color: #080808;
   text-decoration: none;
   border-radius: 8px;
   transition: background-color 0.3s ease;
-  /* box-shadow: 0 15px 25px rgba(0, 0, 0, 0.6); */
+  background: linear-gradient(#34ac86, #0ee619);
 }
 
 .btn:hover {
-  background-color: #199623bb;
+  background-color: #49e94eda;
   color: #f8f1f1;
   box-shadow: 0 15px 25px rgba(0, 0, 0, .6);
+  /* background: linear-gradient(#34ac86, #0ee619); */
 }
 
 .features {
