--- a/frontEnd/cont.css
+++ b/frontEnd/cont.css
@@ -24,7 +24,7 @@
   }
   
   .navbar {
-    background-color: #2e8336df;
+  background-color: #2e8336df;
   color: #fff;
   padding: 10px 0;
   display: flex;
@@ -121,7 +121,7 @@
     margin-left: 130px;
     width: 50%;
     padding: 10px;
-    background-color: #199623bb;
+    /* background-color: #199623bb; */
     
     color: #fff;
     border: none;
@@ -129,9 +129,10 @@
     cursor: pointer;
     text-align: center;
     font-size: 16px;
+    background: linear-gradient(#34ac86, #0ee619);
   }
   form button:hover{
-    background-color: #49e94eda;
+    background-color: #146508da;
     color: black;
   }
   
