--- a/frontEnd/homepg.css
+++ b/frontEnd/homepg.css
@@ -106,7 +106,7 @@ body {
   text-decoration: none;
   border-radius: 8px;
   transition: background-color 0.3s ease;
-  /* box-shadow: 0 15px 25px rgba(0, 0, 0, 0.6); */
+  background: linear-gradient(#34ac86, #0ee619);
 }
 
 .btn:hover {
@@ -169,7 +169,7 @@ body {
 
 .newsletter button {
   padding: 10px 20px;
-  background-color: #61ff66da;
+  background: linear-gradient(#34ac86, #0ee619);
   color: #fff;
   border: none;
   border-radius: 5px;
@@ -202,21 +202,21 @@ body {
 
 .login-buttons{
   position:absolute;
-  top:85px;
+  top:110px;
   right:0;
   text-align:right;
-  padding:10px 0; 
+  padding:0px 10px; 
 
 }
 
 
 .login-button{
-
-  background-color: transparent;
-  color: red;
-  padding: 10px;
-  border:none;
-  border-radius: 5px;
+  color: rgb(250, 247, 247);
+  margin-right: 10px;
+  padding: 2px 10px;
+  border:2px solid black;
+  background-color: #070707;
+  border-radius: 8px;
   text-decoration: none;
   transition: background-color 0.3s ease;
 }
@@ -228,10 +228,11 @@ body {
 .signup-button{
 
   background-color: transparent;
-  color:blue;
-  padding: 10px;
-  border:none;
-  border-radius: 5px;
+  color:rgb(246, 246, 248);
+  padding: 2px 10px;
+  border:2px solid black;
+  background-color: #070707;
+  border-radius: 8px;
   text-decoration: none;
   transition: background-color 0.3s ease;
 }
@@ -239,12 +240,12 @@ body {
 
 .signup-button:hover{
   background-color: transparent;
-  color:blue;
+  color:rgb(11, 11, 11);
 }
 
 
 
 .login-button:hover{
   background-color: transparent;
-  color: red;
+  color: rgb(11, 11, 11);
 }
